syntax = "proto3";
package Protocol;


enum ObjectType
{
	OBJECT_TYPE_NONE = 0;
	OBJECT_TYPE_CREATURE = 1;
	OBJECT_TYPE_PROJECTILE = 2;
	OBJECT_TYPE_ENV = 3;
}

enum CreatureType
{
	CREATURE_TYPE_NONE = 0;
	CREATURE_TYPE_PLAYER = 1;
	CREATURE_TYPE_NPC = 2;
	CREATURE_TYPE_MONSTER = 3;
	CREATURE_TYPE_ENERMY = 4;
}

enum PlayerType
{
	PLAYER_TYPE_NONE = 0;
	PLAYER_TYPE_SURVIVOR = 1;
}

enum EnermyType
{
	ENERMY_TYPE_NONE = 0;
	ENERMY_TYPE_ZOMBIE = 1;
}

enum MoveState
{
	MOVE_STATE_NONE = 0;
	MOVE_STATE_IDLE = 1;
	MOVE_STATE_RUN = 2;
	MOVE_STATE_JUMP = 3;
	MOVE_STATE_SKILL = 4;
}

enum EnermyState
{
	ENERMY_STATE_NONE = 0;
	ENERMY_STATE_IDLE = 1;
	ENERMY_STATE_MOVE = 2;
	ENERMY_STATE_ATTACK = 3;
	ENERMY_STATE_DAMAGE = 4;
	ENERMY_STATE_DIE = 5;
}