syntax = "proto3";
package Protocol;

import "Enum.proto";


message VectorInfo
{
	float x = 1;
	float y = 2;
	float z = 3;
}

message PosInfo
{
	uint64 object_id = 1;
	VectorInfo vector_info = 2;
	float yaw = 3;
	MoveState state = 4;
}

message ObjectInfo
{
	uint64 object_id = 1;
	PosInfo pos_info = 2;
	ObjectType object_type = 3;
	CreatureType creature_type = 4;
	PlayerType player_type = 5;
}